<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="tag_from" translatable="false">{{FROM}}</string>
    <string name="tag_sms" translatable="false">{{SMS}}</string>
    <string name="tag_package_name" translatable="false">{{PACKAGE_NAME}}</string>
    <string name="tag_app_name" translatable="false">{{APP_NAME}}</string>
    <string name="tag_msg" translatable="false">{{MSG}}</string>
    <string name="tag_card_slot" translatable="false">{{CARD_SLOT}}</string>
    <string name="tag_card_subid" translatable="false">{{CARD_SUBID}}</string>
    <string name="tag_receive_time" translatable="false">{{RECEIVE_TIME}}</string>
    <string name="tag_current_time" translatable="false">{{CURRENT_TIME}}</string>
    <string name="tag_device_name" translatable="false">{{DEVICE_NAME}}</string>
    <string name="tag_app_version" translatable="false">{{APP_VERSION}}</string>
    <string name="tag_title" translatable="false">{{TITLE}}</string>
    <string name="tag_call_type" translatable="false">{{CALL_TYPE}}</string>
    <string name="tag_location" translatable="false">{{LOCATION}}</string>
    <string name="tag_location_longitude" translatable="false">{{LOCATION_LONGITUDE}}</string>
    <string name="tag_location_latitude" translatable="false">{{LOCATION_LATITUDE}}</string>
    <string name="tag_location_address" translatable="false">{{LOCATION_ADDRESS}}</string>
    <string name="tag_battery_pct" translatable="false">{{BATTERY_PCT}}</string>
    <string name="tag_battery_status" translatable="false">{{BATTERY_STATUS}}</string>
    <string name="tag_battery_plugged" translatable="false">{{BATTERY_PLUGGED}}</string>
    <string name="tag_battery_info" translatable="false">{{BATTERY_INFO}}</string>
    <string name="tag_battery_info_simple" translatable="false">{{BATTERY_INFO_SIMPLE}}</string>
    <string name="tag_uid" translatable="false">{{UID}}</string>
    <string name="tag_ipv4" translatable="false">{{IPV4}}</string>
    <string name="tag_ipv6" translatable="false">{{IPV6}}</string>
    <string name="tag_net_type" translatable="false">{{NET_TYPE}}</string>
    <string name="type_param_sms">短信</string>
    <string name="type_param_call">通话</string>
    <string name="type_param_app">应用</string>
    <string name="status_param_option_enabled">已启用</string>
    <string name="status_param_option_disabled">已禁用</string>
    <string name="enable">启用</string>
    <string name="disable">禁用</string>
    <string name="sms_type_option_receive">接收</string>
    <string name="sms_type_option_send">发送</string>
    <string name="call_type_option_missed">未接来电</string>
    <string name="call_type_option_call_out">本机去电</string>
    <string name="call_type_option_received">已接来电</string>
    <string name="clone_type_option_network">网络模式</string>
    <string name="clone_type_option_offline">离线模式</string>
    <string name="app_type_option_user">用户应用</string>
    <string name="app_type_option_system">系统应用</string>
    <string name="task_type_option_mine">我的任务</string>
    <string name="task_type_option_fixed">任务中心</string>
    <string name="app_browser_name">通用浏览器</string>
    <string name="description_navigation_main">导航条</string>
    <string name="menu_logs">转发日志</string>
    <string name="menu_senders">发送通道</string>
    <string name="menu_rules">转发规则</string>
    <string name="menu_settings">通用设置</string>
    <string name="menu_settings_step">通用设置·第一步</string>
    <string name="menu_senders_step">发送通道·第二步</string>
    <string name="menu_rules_step">转发规则·第三步</string>
    <string name="menu_logs_step">转发日志·第四步</string>
    <string name="menu_tasks">自动任务·快捷指令</string>
    <string name="menu_server">主动控制·服务端</string>
    <string name="menu_client">主动控制·客户端</string>
    <string name="menu_frpc">内网穿透·Frpc</string>
    <string name="menu_apps">应用列表·复制包名</string>
    <string name="menu_logcat">日志抓取·Logcat</string>
    <string name="menu_help">使用帮助</string>
    <string name="menu_about">关于软件</string>
    <string name="about_app_version">软件版本：%s</string>
    <string name="about_app_version_tips" formatted="false">版本名称：%s\n版本代码：%s\n构建时间：%s\nGit提交ID：%s</string>
    <string name="about_cache_size">缓存大小：%s</string>
    <string name="about_frpc_version">Frpc版本：%s</string>
    <string name="about_item_wechat_miniprogram" formatted="false">微信小程序</string>
    <string name="about_cache_purged">已清理缓存</string>
    <string name="about_frpc_deleted">已删除动态库，重启APP以便生效！</string>
    <string name="about_copyright">© %1$s PPPSCN All rights reserved.</string>
    <string name="about_item_open_source">开源仓库</string>
    <string name="about_item_github">GitHub</string>
    <string name="about_item_gitee">Gitee</string>
    <string name="about_item_donation_link">打赏名单</string>
    <string name="url_project_github">https://github.com/pppscn/SmsForwarder</string>
    <string name="url_project_gitee">https://gitee.com/pp/SmsForwarder</string>
    <string name="url_help">https://gitee.com/pp/SmsForwarder/wikis/pages</string>
    <string name="url_donation_link">https://gitee.com/pp/SmsForwarder.wiki/raw/master/%E6%89%93%E8%B5%8F%E5%90%8D%E5%8D%95.md</string>
    <string name="url_wechat_miniprogram">https://gitee.com/pp/SmsForwarder/raw/main/pic/wechat_miniprogram.jpg</string>
    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="lab_open_qq_app">是否允许页面打开"QQ"?</string>
    <string name="lab_open_third_app">是否允许页面打开第三方应用?</string>
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。\n\n如果你不同意该政策，很遗憾我们将无法为你提供服务！</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>
    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>
    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number" tools:ignore="TypographyDashes">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_password" tools:ignore="TypographyDashes">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="lab_logout_confirm">是否确认退出账号？</string>
    <string name="title_user_protocol">用户协议</string>
    <string name="title_privacy_protocol">隐私政策</string>
    <string name="agree_protocol">我已阅读并同意</string>
    <string name="lab_and">和</string>
    <string name="title_jump_login">跳过</string>
    <string name="label_previous">上一条</string>
    <string name="label_next">下一条</string>
    <string name="tip_ignore_message">以后不再提示此类信息</string>
    <string name="tip_title">你知道吗？</string>
    <string name="privacy">隐私政策</string>
    <string name="refresh_web">刷新网页</string>
    <string name="copy_link">复制链接</string>
    <string name="share_web">网页分享</string>
    <string name="open_in_default_browser">在浏览器打开</string>
    <string name="provided_by_agentweb">技术由 AgentWeb 提供</string>
    <string name="logo">Logo</string>
    <string name="action_add">添加</string>
    <string name="action_add_text">新建配置文本</string>
    <string name="action_add_url">从网址导入</string>
    <string name="action_add_file">从文件导入</string>
    <string name="action_add_scan">扫描二维码</string>
    <string name="action_save">保存配置</string>
    <string name="action_back">返回编辑</string>
    <string name="action_quit">放弃修改</string>
    <string name="action_test">测试规则</string>
    <string name="action_template">模板</string>
    <string name="title_save_config">保存Frpc配置</string>
    <string name="tips_input_config_content">请输入配置内容</string>
    <string name="tips_input_config_name">请输入配置名称</string>
    <string name="done">确定</string>
    <string name="discard">丢弃</string>
    <string name="submit">提交</string>
    <string name="send">发送</string>
    <string name="test">测试</string>
    <string name="all">全部</string>
    <string name="clone">一键克隆</string>
    <string name="setting">通用设置</string>
    <string name="about">关于软件</string>
    <string name="help">使用帮助</string>
    <string name="match_sim_slot">匹配卡槽</string>
    <string name="match_field">匹配字段</string>
    <string name="phone_number">手机号</string>
    <string name="call_type">通话类型</string>
    <string name="package_name">APP包名</string>
    <string name="sms_content">短信内容</string>
    <string name="inform_content">通知内容</string>
    <string name="multiple_matches">多重匹配</string>
    <string name="match_type">匹配模式</string>
    <string name="btn_is">是</string>
    <string name="btn_contain">包含</string>
    <string name="btn_not_contain">不包含</string>
    <string name="btn_start_with">开头</string>
    <string name="btn_end_with">结尾</string>
    <string name="btn_regex">正则匹配</string>
    <string name="match_value">匹配的值</string>
    <string name="match_value_tips">如需匹配多个关键词，请用 正则匹配 或 多重匹配</string>
    <string name="mu_rule_sms_tips">多重匹配规则示例：（语法参见wiki）\n\n并且 是 手机号 相等 10086\n[空格]或者 是 手机号 相等 10011\n并且 是 短信内容 包含 欠费\n\n以上规则表示：收到短信，并且（手机号是10086 或者 手机号是10010），并且 短信内容 包含 欠费 时转发短信\n\n注意：每行开始的空格代表层级，太过复杂的多重规则可能导致内存占用很大！</string>
    <string name="port">端口号</string>
    <string name="header_key">Key</string>
    <string name="header_value">Value</string>
    <string name="header_del">删除Header</string>
    <string name="choose_app">已装APP列表</string>
    <string name="choose_app_hint">下拉选择获取包名，关键字模糊匹配APP名称</string>
    <string name="api_wol">远程WOL</string>
    <string name="server_history">历史记录</string>
    <string name="ip_hint">可选，内网广播地址，例如：192.168.1.255</string>
    <string name="ip_error">IP地址格式错误，例如：192.168.168.168</string>
    <string name="ip_regex" tools:ignore="TypographyDashes">^((\\d|[1-9]\\d|1\\d\\d|2[0-4]\\d|25[0-5])\.){3}(\\d|[1-9]\\d|1\\d\\d|2[0-4]\\d|25[0-5])$</string>
    <string name="mac_hint">必填，例如：AA:BB:CC:DD:EE:FF</string>
    <string name="mac_error">格式错误，例如：AA:BB:CC:DD:EE:FF</string>
    <string name="mac_regex" tools:ignore="TypographyDashes">^((([a-fA-F0-9]{2}:){5})|(([a-fA-F0-9]{2}-){5}))[a-fA-F0-9]{2}$</string>
    <string name="broadcast_address">内网广播地址</string>
    <string name="mac">网卡MAC</string>
    <string name="wol_port_hint">可选，WOL一般透过端口7或端口9进行发送</string>
    <string name="wol_port_error">端口号取值范围：1~65535</string>
    <string name="wol_port_regex" tools:ignore="TypographyDashes">^([0-9]|[1-9]\\d|[1-9]\\d{2}|[1-9]\\d{3}|[1-5]\\d{4}|6[0-4]\\d{3}|65[0-4]\\d{2}|655[0-2]\\d|6553[0-5])$</string>
    <string name="uid">UID</string>
    <string name="task_sms">短信广播</string>
    <string name="task_call">通话广播</string>
    <string name="task_app">APP通知</string>
    <string name="sim_any">不限卡槽</string>
    <string name="sim_1">SIM-1</string>
    <string name="sim_2">SIM-2</string>
</resources>