<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/xui_config_color_background"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/api_wol"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/icon_api_wol"
                tools:ignore="ImageContrastCheck" />

            <LinearLayout
                style="@style/BarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mac" />

                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/et_mac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mac_hint"
                    android:singleLine="true"
                    app:met_clearButton="true"
                    app:met_errorMessage="@string/mac_error"
                    app:met_regexp="@string/mac_regex"
                    app:met_validateOnFocusLost="true"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                style="@style/BarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/broadcast_address" />

                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/et_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ip_hint"
                    android:singleLine="true"
                    app:met_clearButton="true"
                    app:met_errorMessage="@string/ip_error"
                    app:met_regexp="@string/ip_regex"
                    app:met_validateOnFocusLost="true"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                style="@style/BarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/port" />

                <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/et_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wol_port_hint"
                    android:singleLine="true"
                    android:value="9"
                    app:met_clearButton="true"
                    app:met_errorMessage="@string/wol_port_error"
                    app:met_regexp="@string/wol_port_regex"
                    app:met_validateOnFocusLost="true"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_server_history"
            style="@style/SuperButton.Gray.Icon"
            android:drawableStart="@drawable/ic_restore"
            android:paddingStart="7dp"
            android:text="@string/server_history"
            tools:ignore="RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />

        <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_submit"
            style="@style/SuperButton.Blue.Icon"
            android:layout_marginStart="20dp"
            android:drawableStart="@drawable/ic_send_white"
            android:paddingStart="20dp"
            android:text="@string/send"
            tools:ignore="RtlSymmetry,TextContrastCheck,TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>