<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.idormy.sms.forwarder.MainActivity">
    <item
        android:id="@+id/to_setting"
        android:orderInCategory="100"
        android:title="@string/setting"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/to_app_list"
        android:orderInCategory="100"
        android:title="@string/app_list"
        android:icon="@drawable/ic_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/to_clone"
        android:orderInCategory="100"
        android:title="@string/clone"
        android:icon="@drawable/ic_clone"
        app:showAsAction="never" />
    <item
        android:id="@+id/to_about"
        android:orderInCategory="100"
        android:title="@string/about"
        android:icon="@drawable/ic_forwarder"
        app:showAsAction="never" />
    <item
        android:id="@+id/to_help"
        android:orderInCategory="100"
        android:title="@string/help"
        android:icon="@drawable/ic_help"
        app:showAsAction="never" />
</menu>
