<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_key" />

    <EditText
        android:id="@+id/editTextHeaderKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:inputType="text"
        android:singleLine="true"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_value" />

    <EditText
        android:id="@+id/editTextHeaderValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:inputType="text"
        android:singleLine="true"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageViewRemoveHeader"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_delete"
        app:tint="@color/design_default_color_error"
        android:contentDescription="@string/header_del" />

</LinearLayout>
